[package]
name = "through-life"
version = "0.1.0"
description = "Through Life"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.9", features = [] }
tauri-plugin-shell = "2.0.0-beta.2"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-rustls", "postgres", "time", "uuid" ] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
# 开启增量编译
incremental = true
# 增加编译单元数量来提升编译速度
codegen-units = 16
# 降低优化级别加快编译
opt-level = 0

[profile.release]
# 适度优化，在性能和编译速度间取平衡
opt-level = 2
# 开启链接时优化但使用瘦模式，编译更快
lto = "thin"
# 增加编译单元数提升编译速度
codegen-units = 8
# 移除一些调试信息减小体积，但保留基本调试能力
strip = "debuginfo"
